--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ aws-types = "1.3.7"
 tokio = { version = "1", features = ["full"] }
 async-openai = "0.14"
 urlencoding = "2.1.3"
+aws-sdk-bedrock = "1.94.0"
+aws-sdk-cloudwatch = "1.77.0"
+aws-sdk-ec2 = "1.136.0"
