--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,23 +1,49 @@
 [package]
-name = "cloudcheck-rs"
+name = "cloudguard-cli"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+authors = ["Your Name <your.email@example.com>"]
+description = "Multi-cloud security scanner CLI tool"
+license = "MIT"
+
+[[bin]]
+name = "cloudguard"
+path = "src/main.rs"
 
 [dependencies]
-clap = { version = "4.4", features = ["derive"] }
-aws-config = "0.56"
-aws-sdk-iam = "0.32"
-aws-sdk-s3 = "0.32"
-aws-sdk-lambda = "0.32"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-tabled = "0.14"
-reqwest = { version = "0.11", features = ["json"] }  # for GPT/AI
+# AWS SDK
+aws-config = "1.1.0"
+aws-sdk-s3 = "1.10.0"
+aws-sdk-sts = "1.10.0"
+
+# CLI framework
+clap = { version = "4.4", features = ["derive", "env"] }
+tokio = { version = "1.0", features = ["full"] }
+
+# Serialization
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
+# HTTP client for LLM API
+reqwest = { version = "0.11", features = ["json"] }
+
+# Logging and error handling
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 anyhow = "1.0"
-aws-types = "1.3.7"
-tokio = { version = "1", features = ["full"] }
-async-openai = "0.14"
-urlencoding = "2.1.3"
-aws-sdk-bedrock = "1.94.0"
-aws-sdk-cloudwatch = "1.77.0"
-aws-sdk-ec2 = "1.136.0"
+thiserror = "1.0"
+
+# Configuration
+config = "0.14"
+dirs = "5.0"
+
+# Output formatting
+colored = "2.0"
+tabled = "0.15"
+
+# Date/time handling
+chrono = { version = "0.4", features = ["serde"] }
+uuid = "1.17.0"
+
+[dev-dependencies]
+tokio-test = "0.4"
