--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ tabled = "0.15"
 
 # Date/time handling
 chrono = { version = "0.4", features = ["serde"] }
-uuid = "1.17.0"
+uuid = { version = "1.17.0", features = ["v4"] }
 
 [dev-dependencies]
 tokio-test = "0.4"
