--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ tabled = "0.15"
 # Date/time handling
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.17.0", features = ["v4"] }
+dotenvy = "0.15.7"
 
 [dev-dependencies]
 tokio-test = "0.4"
